@@ -10,8 +10,9 @@ Implement 'fast flips' support for some S.A.M. games: Recommended table implemen
  (trn_174h, acd_168h, mtl_170h, twd_160h, wof_500, st_161h, xmn_151h, fg_1200, potc_600, im_183ve, avr_200, avs_170, wpt_140a, tf_180h, bdk_294, shr_141, bbh_170, smanve_101, nba_802)
 Fix some (unfortunately not all) AT91 JIT crashes (i.e. S.A.M. and Whitestar II)
 
-*** ROM SUPPORT *** Thanks to Destruk, ipdb.org, inkochnito, Chad Hendrickson, John Mohr, Soren, Robotworkshop, mIKL
+*** ROM SUPPORT *** Thanks to Destruk, ipdb.org, inkochnito, Chad Hendrickson, John Mohr, Soren, Robotworkshop, mIKL, STR Pinball
 New:
+Inder: Topaz
 Mirco: Lucky Draw
 Williams: Bigfoot R0.1 & R0.1b & R0.1c & R0.1d (FreeWPC based rewrite of White Water)
 
